<resources>
    <string name="app_name">Foodies</string>

    <string name="username_edit_text">Your username</string>
    <string name="password_edit_text">Your password</string>
    <string name="password2_edit_text">Your password again</string>
    <string name="email_edit_text">Your email</string>

    <string name="username">Username</string>
    <string name="dish_name">Dish Name</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_address">Restaurant Address</string>

    <string name="changePassword">Change Your Password</string>
    <string name="changeEmail">Change Your Email Address</string>
    <string name="account">Account</string>
    <string name="email">E-mail</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="firstname">First name</string>
    <string name="signout">Sign Out</string>

    <string name="menu_button">Menu</string>
    <string name="booking_button">Book it!</string>
    <string name="login_button">Sign In</string>
    <string name="signup_button">Sign Up</string>
    <string name="back_button">Back</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="birthdate">Birthdate DD/MM/YEAR</string>

    <string name="restaurant_switch">Are you a restaurant?</string>
    <string name="title_activity_maps">Map</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
